# email-calendar-handler

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_BOOTSTRAP.md  CLAUDE.md  README.md  project-control.yaml  pyproject.toml
.claude/agents/: security-reviewer.md
.github/workflows/: ci.yml
automation/: governance_check.sh
docs/: CHANGELOG.md  architecture.md  deployment-guide.md  manual.md  production-instructions.md  roadmap.md  runbook.md
docs/risks/: risk-register.md
scripts/: secret_scan.py
src/: __init__.py
src/agents/: CLAUDE.md  __init__.py  classification_agent.py  filing_agent.py  ingest_agent.py  learning_agent.py  relationship_agent.py  response_agent.py  supervisor.py
src/ingestion/: __init__.py  gmail_client.py  graph_auth.py  graph_client.py  graph_delta.py  graph_mapper.py  provider_contracts.py  thread_assembler.py
src/memory/: CLAUDE.md  __init__.py  email_store.py  rule_store.py  vector_store.py
src/models/: CLAUDE.md  __init__.py  auth_models.py  email_models.py  feedback_models.py  filing_models.py  persona_models.py
src/personas/: city_council.yaml  consulting.yaml  habitat.yaml  prime_boilers.yaml
src/templates/: commercial.yaml  consulting.yaml  municipal.yaml  nonprofit.yaml
src/utils/: encryption.py  rate_limiter.py  token_counter.py
supabase/: schema.sql
tests/: CLAUDE.md
tests/fixtures/: outlook_message.json
tests/unit/: test_classification_agent.py  test_email_models.py  test_email_store.py  test_filing_agent.py  test_governance_preflight.py  test_graph_auth.py  test_graph_delta.py  test_graph_mapper.py  (+4 more)
(+2 files in other folders)
