[project]
name = "inboxmind"
version = "0.1.0"
description = "Human-approved email intelligence pipeline scaffold for a single-account InboxMind MVP."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "anthropic==0.102.0",
  "cryptography==48.0.1",
  "email-validator==2.3.0",
  "google-api-python-client==2.196.0",
  "langgraph==1.2.0",
  "msal==1.36.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyyaml==6.0.3",
  "supabase==2.30.0",
  "tenacity==9.1.2",
]

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "ruff==0.15.13",
  "types-PyYAML==6.0.12.20260510",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
